# cli-rs

./: Cargo.toml  LICENSE
examples/: simple.rs
src/: error.rs  lib.rs
src/command/: error.rs  facade.rs  mod.rs  model.rs
src/context/: bound.rs  inner.rs  mod.rs  output.rs
src/dispatch/: inner.rs  mod.rs
