[package]
name = "clap-runner"
version = "0.1.1"
edition = "2021"
authors = ["badcw <badcw123@gmail.com>"]
description = "[badawsome] make a cli integration, deps on clap"
license-file = "LICENSE"
repository = "https://github.com/badawsome/cli-rs"
keywords = ["cli", "async"]

[dependencies]
faststr = { version = "0.2" }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
